# feup-edaa-dcel

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  compile_bindings.sh  conanfile.txt  example.json  setup.py
src/: .gitignore  CMakeLists.txt  dcel.cpp  dcel.h  edge.cpp  edge.h  face.cpp  half_edge.cpp  half_edge.h  main.cpp  vertex.cpp  vertex.h
src/dcel/: CMakeLists.txt  Event.cpp  Event.h  GeographicPoint.cpp  GeographicPoint.h  Intersection.cpp  Intersection.h  LineSweep.cpp  LineSweep.h  MapOverlay.cpp  MapOverlay.h  Parser.cpp  Parser.h  Segment.cpp  Segment.h  auxiliary.cpp  auxiliary.h  auxiliary.hpp  dcel.cpp  dcel.h  dcel.hpp  dcel.tpp  face.h  face.hpp  half_edge.cpp  half_edge.h  half_edge.hpp  intersection.hpp  main.cpp  math.cpp  math.hpp  vertex.cpp  vertex.h  vertex.hpp  wrap.cpp
src/dcel/algorithms/line_sweep/: LineSweep.cpp  LineSweep.h
src/dcel/algorithms/line_sweep/event/: Event.h
src/dcel/algorithms/line_sweep/intersection/: Intersection.cpp  Intersection.h
src/dcel/algorithms/line_sweep/segment/: Segment.h
src/dcel/algorithms/map_overlay/: MapOverlay.cpp  MapOverlay.h
src/dcel/auxiliary/: Auxiliary.cpp  Auxiliary.h
src/dcel/auxiliary/cycle_graph/: Cycle.cpp  Cycle.h
src/dcel/auxiliary/cycle_graph/auxiliary/: Edge.tpp  Graph.tpp  Node.tpp
src/dcel/auxiliary/cycle_graph/connectivity/: Connectivity.tpp
src/dcel/auxiliary/geographic_point/: GeographicPoint.cpp  GeographicPoint.h
src/dcel/auxiliary/parser/: Parser.cpp  Parser.h
src/dcel/dcel_substructures/: Face.hpp  Face.tpp  Vertex.hpp  Vertex.tpp
src/dcel/line_sweep/: LineSweep.cpp  LineSweep.h
src/dcel/line_sweep/event/: Event.h
src/dcel/line_sweep/intersection/: Intersection.h
src/dcel/line_sweep/segment/: Segment.h
src/visualization/: Visualizaion.h  Visualization.cpp  Visualization.h  pyvenv.cfg  test.py
